feat: Enhance simulation controls and add Arduino Uno component
- Updated SimulationControls component for improved styling and button interactions.
- Introduced ArduinoUnoNode component to represent Arduino Uno in the canvas.
- Added button press state management in ButtonNode for better user interaction.
- Refined LedNode visuals and interaction handling.
- Removed MicrocontrollerNode as it was redundant.
- Enhanced ResistorNode styling and interaction points.
- Implemented CodePanel for editing and compiling microcontroller code.
- Improved simulation logic in Core.ts to handle voltage propagation and component interactions.
- Updated useCircuitStore and Component types for better type safety and clarity.

--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -1,4 +1,4 @@
-appId: com.electron.app
+appId: com.fermeridamagni.spark.app
 productName: spark
 directories:
   buildResources: build
@@ -33,7 +33,7 @@ linux:
     - AppImage
     - snap
     - deb
-  maintainer: electronjs.org
+  maintainer: fermeridamagni
   category: Utility
 appImage:
   artifactName: ${name}-${version}.${ext}
